--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -45,6 +45,10 @@
     height: 100%;
     border-radius: 8px;
     object-fit: cover;
+
+    &:hover {
+      transform: translateY(-5px);
+    }
   }
 
   &__article-title {
