--- a/src/styles/blocks/testimonials.scss
+++ b/src/styles/blocks/testimonials.scss
@@ -35,6 +35,10 @@
     height: 153px;
     margin-bottom: 28px;
     border-radius: 50%;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__name {
